src/test/fail/unterminated_multi_line_if.ly
###
SyntaxError: Expected '}', not end of file.
Where: File "test/fail/unterminated_multi_line_if.ly" at line 6
###

if 1: {
